--- a/tests/Nexus.Auth.UnitTests/Nexus.Auth.UnitTests.csproj
+++ b/tests/Nexus.Auth.UnitTests/Nexus.Auth.UnitTests.csproj
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>Nexus.Auth.UnitTests</RootNamespace>
         <IsPackable>false</IsPackable>
+        <GenerateDocumentationFile>false</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
