--- a/tests/Nexus.Common.UnitTests/Nexus.Common.UnitTests.csproj
+++ b/tests/Nexus.Common.UnitTests/Nexus.Common.UnitTests.csproj
@@ -5,8 +5,8 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>Nexus.Common.UnitTests</RootNamespace>
-
         <IsPackable>false</IsPackable>
+        <GenerateDocumentationFile>false</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
