--- a/src/Nexus.Common/Nexus.Common.csproj
+++ b/src/Nexus.Common/Nexus.Common.csproj
@@ -8,6 +8,7 @@
     <ItemGroup>
         <None Include="README.md" Pack="true" PackagePath="\" />
         <None Include="LICENSE.txt" Pack="true" PackagePath="\" />
+        <None Include="../../assets/icon.png" Pack="true" PackagePath="\" />
     </ItemGroup>
 
 </Project>
