--- a/src/Nexus.Framework.Web/Nexus.Framework.Web.csproj
+++ b/src/Nexus.Framework.Web/Nexus.Framework.Web.csproj
@@ -17,6 +17,7 @@
     <ItemGroup>
         <None Include="README.md" Pack="true" PackagePath="\" />
         <None Include="LICENSE.txt" Pack="true" PackagePath="\" />
+        <None Include="../../assets/icon.png" Pack="true" PackagePath="\" />
     </ItemGroup>
 
     <ItemGroup>
