--- a/src/Nexus.Logs/Nexus.Logs.csproj
+++ b/src/Nexus.Logs/Nexus.Logs.csproj
@@ -23,5 +23,6 @@
     <ItemGroup>
         <None Include="README.md" Pack="true" PackagePath="\" />
         <None Include="LICENSE.txt" Pack="true" PackagePath="\" />
+        <None Include="../../assets/icon.png" Pack="true" PackagePath="\" />
     </ItemGroup>
 </Project>
