--- a/src/Nexus.Management/Nexus.Management.csproj
+++ b/src/Nexus.Management/Nexus.Management.csproj
@@ -15,5 +15,6 @@
     <ItemGroup>
         <None Include="README.md" Pack="true" PackagePath="\" />
         <None Include="LICENSE.txt" Pack="true" PackagePath="\" />
+        <None Include="../../assets/icon.png" Pack="true" PackagePath="\" />
     </ItemGroup>
 </Project>
