--- a/src/Nexus.Persistence/Nexus.Persistence.csproj
+++ b/src/Nexus.Persistence/Nexus.Persistence.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
         <None Include="README.md" Pack="true" PackagePath="\" />
         <None Include="LICENSE.txt" Pack="true" PackagePath="\" />
+        <None Include="../../assets/icon.png" Pack="true" PackagePath="\" />
     </ItemGroup>
 
     <ItemGroup>
