--- a/src/Nexus.Telemetry/Nexus.Telemetry.csproj
+++ b/src/Nexus.Telemetry/Nexus.Telemetry.csproj
@@ -24,5 +24,6 @@
     <ItemGroup>
         <None Include="README.md" Pack="true" PackagePath="\" />
         <None Include="LICENSE.txt" Pack="true" PackagePath="\" />
+        <None Include="../../assets/icon.png" Pack="true" PackagePath="\" />
     </ItemGroup>
 </Project>
