--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,6 @@
 <Project>
     <PropertyGroup>
-        <NexusLibraryVersion>0.6.0.0</NexusLibraryVersion>
+        <NexusLibraryVersion>0.7.0.0</NexusLibraryVersion>
     </PropertyGroup>
     <PropertyGroup>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
@@ -22,6 +22,6 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>https://github.com/afroze9/nexus</RepositoryUrl>
-        <Version>$(NexusLibraryVersion)</Version>
+        <Version>$(NexusLibraryVersion)-preview1</Version>
     </PropertyGroup>
 </Project>
