Adding Nexus Meter Auto Configuration
Signed-off-by: afroze9 <afrozeamjad@gmail.com>

--- a/src/Nexus.Telemetry/Nexus.Telemetry.csproj
+++ b/src/Nexus.Telemetry/Nexus.Telemetry.csproj
@@ -26,4 +26,8 @@
         <None Include="LICENSE.txt" Pack="true" PackagePath="\" />
         <None Include="../../assets/icon.png" Pack="true" PackagePath="\" />
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Nexus.Common\Nexus.Common.csproj" />
+    </ItemGroup>
 </Project>
