Update package versions and add a new one
This commit updates the version of the library in Directory.Build.props file from -preview2 to -preview3, ensuring the most recent features are included. It also comments out the OpenTelemetry.Contrib.Instrumentation package versions in the Directory.Packages.props file due to instability issues of the beta versions used earlier. A new package, Microsoft.DiaSymReader was added to the same file for better symbolism reading.

Signed-off-by: afroze9 <afrozeamjad@gmail.com>

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -40,14 +40,14 @@
     <PackageVersion Include="NSubstitute.Analyzers.CSharp" Version="1.0.16" />
     <PackageVersion Include="Ocelot.Provider.Consul" Version="19.0.2" />
     <PackageVersion Include="Ocelot" Version="19.0.2" />
-    <PackageVersion Include="OpenTelemetry.Contrib.Instrumentation.EntityFrameworkCore" Version="1.0.0-beta2" />
+<!--    <PackageVersion Include="OpenTelemetry.Contrib.Instrumentation.EntityFrameworkCore" Version="1.0.0-beta2" />-->
     <PackageVersion Include="OpenTelemetry.Exporter.Console" Version="1.4.0" />
     <PackageVersion Include="OpenTelemetry.Exporter.Jaeger" Version="1.4.0" />
     <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.4.0" />
     <PackageVersion Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.5.0-rc.1" />
     <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.4.0" />
     <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc9.14" />
-    <PackageVersion Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.0.0-beta.6" />
+<!--    <PackageVersion Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.0.0-beta.6" />-->
     <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc9.14" />
     <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.1.0-rc.2" />
     <PackageVersion Include="Polly.Extensions.Http" Version="3.0.0" />
@@ -74,5 +74,6 @@
     <PackageVersion Include="FluentAssertions" Version="6.11.0" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.4.5" />
     <PackageVersion Include="xunit" Version="2.4.2" />
+    <PackageVersion Include="Microsoft.DiaSymReader" Version="2.0.0" />
   </ItemGroup>
 </Project>
