Add descriptive comments for methods and classes
This commit adds comprehensive summary comments to several classes and methods across different files in our code base, aimed to maintain and enhance the overall readability of the code. Additions include in-depth explanations for usage of methods and classes, and their functionalities. Also updated some modules with required dependencies to bolster unit testing. This is a step forward in keeping our code self-documenting and maintainable.

Signed-off-by: afroze9 <afrozeamjad@gmail.com>

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -22,6 +22,6 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>https://github.com/afroze9/nexus</RepositoryUrl>
-        <Version>$(NexusLibraryVersion)-preview3</Version>
+        <Version>$(NexusLibraryVersion)</Version>
     </PropertyGroup>
 </Project>
